--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ python-multipart==0.0.6
 torch>=1.13.0
 langchain>=0.0.281
 transformers>=4.33.0
+sentence_transformers>=2.1.0
 pypdf>=3.12.0
 docx2txt>=0.8.0
